@@ -24,8 +24,9 @@
 #include	"shtable.h"
 
 /*
- * This is the list of invocation and set options
- * This list must be in ASCII sorted order
+ * This is the list of invocation and 'set' options.
+ * It must be sorted in ASCII order except for the no- prefix.
+ * See sh_lookopt() in string.c.
  */
 
 const Shtable_t shtab_options[] =
